# teeuniverse

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  appdata.xml  circle.yml
.github/workflows/: build.yaml
data/assets/: tw_dm1.tup
data/countryflags/: index.json
data/languages/: fr.json  index.json
datasrc/share/applications/: teeuniverse_editor.desktop
modules/: FindFreetype.cmake  FindHarfBuzz.cmake  FindICU.cmake  FindSDL2.cmake
other/: config_directory.bat
scripts/assets/: assets.py
scripts/postinstall/: postinstall_linux.sh
scripts/release/: make_release.sh
scripts/release/toolchains/: Toolchain-linux32.cmake  Toolchain-linux64.cmake  Toolchain-mingw32.cmake  Toolchain-mingw64.cmake
src/: editor.cpp  editor.rc.in  game.cpp  make_assets_ddnet.cpp  make_assets_gui_cursor.cpp  make_assets_gui_editor.cpp  make_assets_gui_game.cpp  make_assets_infclass.cpp  make_assets_ninslash.cpp  make_assets_openfng.cpp  make_assets_sport.cpp  make_assets_teeworlds.cpp  make_assets_univ_ddnet.cpp  make_assets_univ_infclass.cpp  make_assets_univ_openfng.cpp  make_assets_univ_teeworlds.cpp  server.cpp  tupinfo.cpp  version.h.in
src/client/: kernel.cpp  kernel.h  keynames.h  keys.h  loading_tools.cpp  loading_tools.h  maprenderer.cpp  maprenderer.h  skeletonrenderer.cpp  skeletonrenderer.h
src/client/components/: assetsrenderer.cpp  assetsrenderer.h  bindsmanager.cpp  bindsmanager.h  graphics.cpp  graphics.h  graphics_backend_sdl.cpp  graphics_backend_sdl.h  gui.cpp  gui.h  input.cpp  input.h  textrenderer.cpp  textrenderer.h
src/client/gui/: bind-edit.cpp  bind-edit.h  boxlayout.cpp  boxlayout.h  button.cpp  button.h  color-edit.cpp  color-edit.h  combobox.cpp  combobox.h  duration-edit.cpp  duration-edit.h  expand.cpp  expand.h  filler.cpp  filler.h  float-edit.cpp  float-edit.h  integer-edit.cpp  integer-edit.h  label.cpp  label.h  listlayout.cpp  listlayout.h  panellayout.cpp  panellayout.h  popup.cpp  popup.h  rect.cpp  rect.h  scrollbar.cpp  scrollbar.h  slider.cpp  slider.h  tabs.cpp  tabs.h  text-edit.cpp  text-edit.h  toggle.cpp  toggle.h  (+2 more)
src/editor/: kernel.cpp  kernel.h
src/editor/components/: gui.cpp  gui.h
src/editor/gui/: assetsinspector.cpp  assetsinspector.h  assetsinspector_fields.cpp  assetslist.cpp  assetslist.h  image_picker.cpp  image_picker.h  preferences.cpp  preferences.h  tilingmaterial_picker.cpp  tilingmaterial_picker.h  timeline.cpp  timeline.h  view.cpp  view.h  view_gui.cpp  view_gui.h  view_image.cpp  view_image.h  view_image_eraser.cpp  view_image_eraser.h  view_image_spritecreator.cpp  view_image_spritecreator.h  view_map.cpp  view_map.h  view_map_crop.cpp  view_map_crop.h  view_map_eraser.cpp  view_map_eraser.h  view_map_fill.cpp  view_map_fill.h  view_map_linedrawer.cpp  view_map_linedrawer.h  view_map_object.cpp  view_map_object.h  view_map_picker.cpp  view_map_picker.h  view_map_quad.cpp  view_map_quad.h  view_map_stamp.cpp  (+17 more)
src/game/: kernel.cpp  kernel.h
src/game/components/: bindsmanager.cpp  bindsmanager.h  countryflags.cpp  countryflags.h  gui.cpp  gui.h
src/game/gui/: console.cpp  console.h  settings.cpp  settings.h  start.cpp  start.h
src/server/: kernel.cpp  kernel.h
src/shared/: archivefile.cpp  archivefile.h  autolayer.cpp  autolayer.h  errorstack.h  graphics.h  kernel.cpp  kernel.h
src/shared/assets/: asset.cpp  asset.h  assetpath.cpp  assetpath.h  assetslist.h  assetspackage.cpp  assetspackage.h  assetssaveloadcontext.cpp  assetssaveloadcontext.h  image.cpp  maplayerobjects.cpp  maplayerquads.cpp  mapzoneobjects.cpp  skeletonanimation.cpp  sprite.cpp
src/shared/components/: assetsmanager.cpp  assetsmanager.h  assetsmanager_history.cpp  assetsmanager_history.h  assetsmanager_image.cpp  assetsmanager_import_twmap.cpp  assetsmanager_twmap.cpp  assetsmanager_zip.cpp  cli.cpp  cli.h  localization.cpp  localization.h  storage.cpp  storage.h
src/shared/geometry/: bezier.h  geometry.h  linetesselation.cpp  linetesselation.h  quad.cpp  quad.h
src/shared/imageprocessing/: addborder.h  dilate.h
src/shared/math/: color.h  math.h  vector.h
src/shared/system/: debug.cpp  debug.h  fs.cpp  fs.h  memory.cpp  memory.h  string.cpp  string.h  threading.cpp  threading.h  time.cpp  time.h  types.h  zip.h
src/shared/tl/: algorithm.h  allocator.h  array.h  array2d.h  base.h  hashtable.h  range.h  sorted_array.h  threading.h
src/tw07/shared/: datafile.cpp  datafile.h  mapitems.h
src/unittest/: archivefile.cpp  assetsmanager.cpp  localization.cpp  shared_kernel.cpp  system_fs.cpp  system_string.cpp  unittest.h
